Fix top level link in logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container mx-auto flex justify-between items-center">
                 <div class="flex items-center space-x-4">
                     <span class="text-xl font-bold bg-gradient-to-r from-blue-500 to-purple-200 inline-block text-transparent bg-clip-text">
-                        <a href="/" rel="noopener noreferrer" class="hover:underline pointer-events-auto">
+                        <a href="/htmx-tailwind-demo/" rel="noopener noreferrer" class="hover:underline pointer-events-auto">
                             Bible Verse Example
                         </a>
                     </span>
